# rpg

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SPEC.md  build.rs  emdaer.dm  justfile  psql-plugins-proposal.md  s2.md  slash-rpg-SPEC.md
.cargo/: config.toml
.github/codeql/: codeql-config.yml
.github/workflows/: checks.yml  ci.yml  codeql.yml  release.yml  wasm-check.yml
HomebrewFormula/: rpg.rb
benches/: non_ai_paths.rs
demos/: README.md  ash-cursor-demo.cast  ash-cursor-demo.tape  ash-cursor-record-tmux.sh  ash-cursor-record.sh  ash-cursor-workload-light.sh  ash-cursor-workload.sh  gif1_optimize.tape  gif2_typo.tape  gif3_t2s.tape  gif4_pspg.tape  gif5_lua.tape  postgres-dba.cast  quickstart-demo.cast  slash-ash-general.cast  slash-ash-pgash.cast
deploy/: Dockerfile  com.rpg.agent.plist  com.samo.agent.plist  install-windows-service.ps1  rpg-daemon.service  rpg.service  samo.service
deploy/helm/rpg/: Chart.yaml  values.yaml
deploy/helm/rpg/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
docs/: COMMANDS.md  GLOSSARY.md  WASM.md  ash-demo.cast  psql-compat.md
examples/commands/: slow_mean.lua  slow_total.lua  table_info.lua
patches/upstream-tokio-postgres/: 0001-fix-copy_in-double-sync.patch  0002-fix-pathbuf-cfg-windows.patch  README.md
scripts/: install.sh
src/: alert_delivery.rs  audit_persistence.rs  backup_monitoring.rs  bloat.rs  capabilities.rs  check.rs  compat.rs  complete.rs  conditional.rs  config.rs  config_tuning.rs  connection.rs  connector_health.rs  connector_setup.rs  connectors.rs  copy.rs  crosstab.rs  daemon.rs  dba.rs  describe.rs  dispatcher.rs  governance.rs  health_check_commands.rs  highlight.rs  history_picker.rs  index_health.rs  init.rs  input.rs  io.rs  issues.rs  large_object.rs  lib.rs  llm_auditor.rs  logging.rs  lua_commands.rs  lua_engine.rs  macros.rs  main.rs  markdown.rs  metacmd.rs  (+25 more)
src/ai/: anthropic.rs  context.rs  mod.rs  ollama.rs  openai.rs
src/ash/: mod.rs  renderer.rs  sampler.rs  state.rs
src/connectors/: cloudwatch.rs  connector_health.rs  datadog.rs  github.rs  gitlab.rs  http_json.rs  issue_sync.rs  jira.rs  mod.rs  pganalyze.rs  postgresai.rs  script.rs  supabase.rs  testing.rs
src/explain/: highlight.rs  issues.rs  mod.rs  render.rs  share.rs
src/repl/: ai.rs  ai_commands.rs  execute.rs  mod.rs  watch.rs
src/rpg/: combat.rs  entities.rs  mod.rs  renderer.rs  world.rs
src/rpg/demo/: slash-rpg-demo.cast
src/wasm/: connector.rs  entry.rs  io.rs  line_reader.rs  mod.rs
tests/: connection_paths.rs  docker-compose.test.yml  integration_repl.rs  integration_smoke.rs
tests/ai/: ash-general.md  postgres-dba.exp  postgres-dba.md  quickstart-demo.exp  quickstart-demo.md  slash-ash-general.md  slash-ash-pgash.md
tests/common/: mod.rs
tests/compat/: test-compat.sh  test-connections.sh  test-psql-regress.sh
tests/fixtures/: schema.sql
wasm/: build-psql-wasm.sh  build-rpg-wasm.sh  index.html  patch_poll.cjs  serve.py  termcap_stub.c  termcap_stub.h  ws-proxy.js
wasm/pkg/: rpg.d.ts  rpg.js  rpg_bg.wasm  rpg_bg.wasm.d.ts
wasm/pkg-new/: rpg.d.ts  rpg.js  rpg_bg.wasm  rpg_bg.wasm.d.ts
