[package]
name = "rpg"
version = "0.8.3"
edition = "2021"
rust-version = "1.82"
description = "Modern Postgres terminal with built-in diagnostics and AI assistant"
license = "Apache-2.0"
repository = "https://github.com/NikolayS/project-alpha"

[features]
integration = []
lua = ["dep:mlua"]
default = ["ssh"]
wasi = []  # enables WSS proxy backend instead of native TCP
ssh = ["dep:russh"]  # SSH tunnel support (not available on WASI)

[profile.release]
strip = true
lto = true
codegen-units = 1

[[bin]]
name = "rpg"
path = "src/main.rs"

[dependencies]
bytes = "1"
mlua = { version = "0.10", features = ["lua54", "vendored"], optional = true }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "stream"] }
russh = { version = "0.57", default-features = false, features = ["ring", "flate2"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
futures = "0.3"
ring = { version = "0.17", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "time", "io-util"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.29"
libc = "0.2"
ratatui = "0.30"
rpassword = "7"
rustyline = "15"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "process"] }
tokio-postgres = "0.7"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
x509-certificate = { version = "0.23", default-features = false }
unicode-width = "0.2"
webpki-roots = "0.26"

[[bench]]
name = "non_ai_paths"
harness = false

[dev-dependencies]
anyhow = "1"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3"
tempfile = "3"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow common patterns that pedantic flags unnecessarily
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
